<resources>
    <string name="app_name">homeofcars</string>
    <!--一级界面"我"-->
    <string name="fra_mine_login_text">账号登录</string>
    <string name="fra_mine_like_text">我的收藏</string>
    <string name="fra_mine_coupon_text">我的优惠券</string>
    <string name="fra_mine_history_text">浏览历史</string>
    <string name="fra_mine_draft_text">我的草稿</string>
    <string name="fra_mine_use_text">没流量也能用</string>
    <string name="fra_mine_use_detail_text">下载高德地图畅通无阻</string>
    <string name="fra_mine_setting_text">设置</string>
    <string name="fra_mine_webo_text">新浪微博</string>
    <string name="fra_mine_qq_text">腾讯QQ</string>
    <string name="fra_mine_wecat_text">微信</string>
    <string name="fra_mine_night_text">夜间模式</string>
    <string name="fra_mine_sun_text">日间模式</string>
    <!--一级界面"推荐"-->
    <string name="fra_recommend_title">限时抢</string>
    <!--一级界面"论坛"-->
    <string name="fra_forum_title_left">精选</string>
    <string name="fra_forum_title_right">论坛</string>
    <string name="fra_forum_recommend">精选推荐</string>
    <string name="fra_forum_hot">24小时热帖</string>
    <!--一级界面"发现"-->
    <string name="fra_found_title_text">发现</string>
    <string name="item_found_activity_title_text">活动专区</string>
    <string name="item_found_activity_subtitle_text">更多活动</string>
    <string name="item_found_produce_title_text">商品列表</string>
    <string name="item_found_time_gogo_title_text">限时抢购</string>
    <string name="item_found_time_title_text">双11抢购</string>
    <string name="item_found_time_day_text">天</string>
    <string name="item_found_time_hour_text">:</string>
    <!--登录界面-->
    <string name="ac_login_user_name">手机号/邮箱/用户名</string>
    <string name="ac_login_ueser_password">密码</string>
    <string name="ac_login_make_sure">登录</string>
    <string name="ac_login_register">注册</string>
    <string name="ac_login_forget_password">忘记密码?</string>
    <!--推荐更多-->
    <string name="ac_re_more_title">更多</string>
    <string name="ac_re_more_subtitle">长按可推动排序</string>
    <!--推荐下的推荐界面-->
    <string name="fra_re_recommend_flovar_time">00:00</string>
    <string name="fra_re_recommend_flovar_title">标题</string>
    <string name="fra_re_recommend_flovar_count">0000播放</string>
    <string name="fra_re_recommend_flovar_date">00-00</string>
    <string name="fra_re_recommend_common_count">0000评论</string>
    <string name="fra_re_recommend_common_first">首发</string>
    <string name="fra_re_recommend_three_picture_title">标题</string>
    <string name="fra_re_recommend_three_picture_count">0000图片</string>
    <string name="fra_re_recommend_three_picture_date">00-00</string>
    <!--搜索界面-->
    <string name="ac_search_delete_btn">取消</string>
    <string name="ac_search_hint">搜索关键词</string>
    <string name="ac_search_history">搜索历史</string>
    <string name="ac_search_delete">清除</string>
    <!--论坛精选-->
    <string name="fra_choose_forum_recommend">精选推荐</string>
    <string name="fra_choose_forum_all">全部</string>
    <string name="fra_choose_forum_24">24小时热帖</string>
    <string name="fra_choose_forum_history">浏览过的论坛</string>
    <!--选车-->
    <string name="fra_select_new_hot">热门品牌</string>



</resources>
