<?xml version="1.0" encoding="utf-8"?>
<!--一般-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_margin="@dimen/fra_re_recommend_flovar_all_margin"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
    <LinearLayout
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/fra_re_recommend_flovar_title_text"
            android:id="@+id/item_re_common_title"
            android:text="@string/fra_re_recommend_flovar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/fra_re_recommend_common_first_text"
                android:textSize="@dimen/fra_re_recommend_flovar_time_text_size"
                android:textColor="@color/fra_re_recommend_common_first_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/fra_re_recommend_common_first"
                />
            <TextView
                android:textSize="@dimen/fra_re_recommend_flovar_time_text_size"
                android:id="@+id/item_re_common_play_count"
                android:text="@string/fra_re_recommend_common_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="@dimen/fra_re_recommend_flovar_time_text_size"
                android:id="@+id/item_re_common_date"
                android:text="@string/fra_re_recommend_flovar_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:scaleType="fitXY"
            android:id="@+id/item_re_common_logo"
            android:src="@mipmap/ahlib_logo_180_136"
            android:layout_width="100dp"
            android:layout_height="60dp"/>


    </FrameLayout>

</LinearLayout>