<?xml version="1.0" encoding="utf-8"?>
<!--登录-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#3397ef"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ac_login_user_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ac_login_user_name"/>

        <EditText
            android:id="@+id/ac_login_user_password_et"
            android:hint="@string/ac_login_ueser_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/ac_login_make_sure_btn"
            android:text="@string/ac_login_make_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/ac_login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/ac_login_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <!--第三方等登录-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fra_mine_item_bg_color">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fra_mine_item_margin_vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fra_mine_login_height"
                android:layout_marginBottom="@dimen/fra_mine_item_margin_vertical"
                android:layout_marginTop="@dimen/fra_mine_item_margin_vertical"
                android:src="@mipmap/icon_weibo"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="@dimen/fra_mine_login_height"
                android:layout_marginBottom="@dimen/fra_mine_item_margin_vertical"
                android:layout_marginTop="@dimen/fra_mine_item_margin_vertical"
                android:src="@mipmap/icon_qq"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fra_mine_login_height"
                android:layout_marginBottom="@dimen/fra_mine_item_margin_vertical"
                android:layout_marginTop="@dimen/fra_mine_item_margin_vertical"
                android:src="@mipmap/icon_wecat"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>