<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/bg_color"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:background="@color/item_bg_color"
        android:padding="@dimen/ac_search_padding"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/fra_choose_forum_recommend"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fra_choose_forum_all"/>
        <ImageView
            android:layout_marginLeft="@dimen/ac_search_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ahlib_arrow_right"
            android:layout_marginRight="@dimen/ac_search_padding"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/ac_search_margin"
        android:layout_marginBottom="@dimen/ac_search_margin"
        android:background="@color/item_bg_color"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="@dimen/ac_search_padding"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/hotdoor"
                android:layout_marginRight="@dimen/ac_search_padding"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/fra_choose_forum_24"/>
            <ImageView
                android:layout_marginRight="@dimen/ac_search_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ahlib_arrow_right"/>
        </LinearLayout>

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:background="@color/item_bg_color"
        android:id="@+id/fra_forum_choose_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>