<?xml version="1.0" encoding="utf-8"?>
<!--一级界面"我"-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/fra_mine_bg_color"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--调节黑天和白天-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fra_mine_item_bg_color"
            android:gravity="right"
            android:paddingBottom="@dimen/fra_mine_item_padding_vertical">

            <TextView
                android:id="@+id/fra_mine_brightness_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fra_mine_night_text"
                android:paddingRight="@dimen/fra_mine_item_padding_horizontal"
                android:paddingTop="@dimen/fra_mine_item_padding_vertical"
                android:paddingBottom="@dimen/fra_mine_item_padding_vertical"/>
        </LinearLayout>
        <!--账号登录的头像-->
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fra_mine_item_bg_color"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fra_mine_user_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ahlib_userpic_default"/>

            <TextView
                android:paddingTop="@dimen/fra_mine_item_padding_vertical"
                android:paddingBottom="@dimen/fra_mine_item_padding_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fra_mine_login_text"/>
        </LinearLayout>
        <!--第三方等登录-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fra_mine_item_bg_color">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/fra_mine_item_margin_vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@mipmap/icon_weibo"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/fra_mine_item_margin_vertical"
                    android:layout_marginBottom="@dimen/fra_mine_item_margin_vertical"
                    android:layout_height="@dimen/fra_mine_login_height"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/fra_mine_webo_text"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <ImageView

                    android:src="@mipmap/icon_qq"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/fra_mine_item_margin_vertical"
                    android:layout_marginBottom="@dimen/fra_mine_item_margin_vertical"
                    android:layout_height="@dimen/fra_mine_login_height"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/fra_mine_qq_text"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@mipmap/icon_wecat"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/fra_mine_item_margin_vertical"
                    android:layout_marginBottom="@dimen/fra_mine_item_margin_vertical"
                    android:layout_height="@dimen/fra_mine_login_height"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/fra_mine_webo_text"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <!--我的收藏-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fra_mine_item_margin_vertical"
            android:background="@color/fra_mine_item_bg_color"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/fra_mine_item_padding_horizontal"
            android:paddingRight="@dimen/fra_mine_item_padding_horizontal"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ahlib_icon_collection_p2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fra_mine_like_text"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ahlib_arrow_right"/>
        </LinearLayout>
        <!--我的优惠券-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fra_mine_item_margin_vertical"
            android:background="@color/fra_mine_item_bg_color"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/fra_mine_item_padding_horizontal"
            android:paddingRight="@dimen/fra_mine_item_padding_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ahlib_icon_collection_p2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fra_mine_coupon_text"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ahlib_arrow_right"/>
        </LinearLayout>
        <!--浏览历史-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fra_mine_item_margin_vertical"
            android:background="@color/fra_mine_item_bg_color"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/fra_mine_item_padding_horizontal"
            android:paddingRight="@dimen/fra_mine_item_padding_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ahlib_icon_collection_p2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fra_mine_history_text"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ahlib_arrow_right"/>
        </LinearLayout>
        <!--我的草稿-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fra_mine_item_bg_color"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/fra_mine_item_padding_horizontal"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/fra_mine_item_padding_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ahlib_icon_collection_p2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fra_mine_draft_text"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ahlib_arrow_right"/>
        </LinearLayout>
        <!--没流量也能用-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fra_mine_item_bg_color"
            android:paddingLeft="@dimen/fra_mine_item_padding_horizontal"
            android:paddingRight="@dimen/fra_mine_item_padding_horizontal"
            android:layout_marginTop="@dimen/fra_mine_item_margin_vertical"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ahlib_icon_collection_p2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fra_mine_use_text"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ahlib_arrow_right"/>
        </LinearLayout>
        <!--设置-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/fra_mine_item_padding_horizontal"
            android:paddingRight="@dimen/fra_mine_item_padding_horizontal"
            android:layout_marginTop="@dimen/fra_mine_item_margin_vertical"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/fra_mine_item_bg_color">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ahlib_icon_collection_p2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fra_mine_setting_text"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ahlib_arrow_right"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>