<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:textColor="@color/fra_re_recommend_three_pic_title"
        android:layout_marginLeft="@dimen/fra_re_recommend_three_pic_margin"
        android:layout_marginRight="@dimen/fra_re_recommend_three_pic_margin"
        android:layout_marginTop="@dimen/fra_re_recommend_three_pic_margin"
        android:id="@+id/item_re_three_pic_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fra_re_recommend_three_picture_title"/>

    <LinearLayout
        android:layout_margin="@dimen/fra_re_recommend_three_pic_margin"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView

            android:scaleType="fitXY"
            android:layout_marginRight="@dimen/fra_re_recommend_three_pic_pad"
            android:src="@mipmap/ahlib_logo_180_136"
            android:id="@+id/item_re_three_pic_left"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <ImageView
            android:scaleType="fitXY"
            android:src="@mipmap/ahlib_logo_180_136"
            android:id="@+id/item_re_three_pic_center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/fra_re_recommend_three_pic_pad"
            android:layout_height="wrap_content"/>

        <ImageView
            android:scaleType="fitXY"
            android:src="@mipmap/ahlib_logo_180_136"
            android:id="@+id/item_re_three_pic_right"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="@dimen/fra_re_recommend_three_pic_margin"
        android:layout_marginRight="@dimen/fra_re_recommend_three_pic_margin"
        android:layout_marginBottom="@dimen/fra_re_recommend_three_pic_margin"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/fra_re_recommend_flovar_time_text_size"
            android:id="@+id/item_re_three_pic_count"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/fra_re_recommend_three_picture_count"/>
        <TextView
            android:textSize="@dimen/fra_re_recommend_flovar_time_text_size"
            android:id="@+id/item_re_three_pic_date"
            android:text="@string/fra_re_recommend_three_picture_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>